--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- About section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="2330332.jpg" alt="">
+            <img src="2330332.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading"><span data-translate="aboutMe">ABOUT Me</span></h2>
